# cg_recap

./: Cargo.toml  README.md
cube-map_reflections/: main.rs
cube-map_reflections/shaders/: main.frag  main.vert  reflection.frag
environment_mapping/: main.rs  synopsis.md
environment_mapping/shaders/: main.frag  main.vert
screen-space_reflections/: main.rs
screen-space_reflections/assets/: cube.glb  icosphere.glb
screen-space_reflections/shaders/: main.frag
src/: lib.rs  utils.rs
