[package]
name = "cg_recap"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
gl = "0.14.0"
glfw = "0.58.0"
image = "0.25.5"
nalgebra-glm = "0.19.0"
russimp = { version = "3.2.0", features = ["prebuilt"] }

[[bin]]
name = "environment_mapping"
path = "environment_mapping/main.rs"

[[bin]]
name = "cube-map_reflections"
path = "cube-map_reflections/main.rs"
